tests/cases/operators/errors/operators-question.ari
enum MaybeI64 {
  None,
  Some(i32),
}

fn unwrap(value: MaybeI64) -> i32 {
  return value?;
}

fn main() -> i64 {
  return unwrap(Some(1i32)) as i64;
}
